Command-line Hotspot debugger tests fail on Windows AArch64

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b23
    • aarch64
    • windows

      These tests are under the path serviceability/sa/Clhsdb*.java
      - serviceability/sa/ClhsdbCDSCore.java
      - serviceability/sa/ClhsdbCDSJstackPrintAll.java
      - serviceability/sa/ClhsdbDumpheap.java
      - serviceability/sa/ClhsdbFindPC.java
      - serviceability/sa/ClhsdbInspect.java
      - serviceability/sa/ClhsdbJdis.java
      - serviceability/sa/ClhsdbJstack.java
      - serviceability/sa/ClhsdbPmap.java
      - serviceability/sa/ClhsdbPrintAs.java
      - serviceability/sa/ClhsdbPstack.java
      - serviceability/sa/ClhsdbSource.java
      - serviceability/sa/ClhsdbThreadContext.java
      - serviceability/sa/ClhsdbWhere.java

      The register information from the native OS context is missing.

            Assignee:
            Saint Wesonga
            Reporter:
            Saint Wesonga
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: