8370974: Command-line Hotspot debugger tests fail on Windows AArch64

Reviewed-by: dholmes, cjplummer